# open-forms-ext-token-exchange

./: .bumpversion.cfg  .gitignore  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.rst  docker-compose.yml  docker-init-db.sql  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml  code_quality.yaml
ci/: Dockerfile  docker-compose.ci.yml  docker-init-db.sql
docs/: conf.py  index.rst  quickstart.rst
testapp/: settings.py
token_exchange/: __init__.py  apps.py  auth.py  models.py  plugin.py  signals.py
token_exchange/migrations/: 0001_initial.py
token_exchange/tests/: factories.py  test_custom_auth.py  test_signals.py
